KOGITO-5072: Open Online Editor in read-only mode with the form filled up.

--- a/packages/online-editor/static/resources/style.css
+++ b/packages/online-editor/static/resources/style.css
@@ -54,6 +54,12 @@
   padding: var(--pf-global--spacer--xs);
 }
 
+.kogito--editor__toolbar-name-container.readonly h3 {
+  visibility: visible;
+  border: none;
+  font-weight: 100;
+}
+
 .kogito--editor__toolbar-name-container input {
   border: var(--pf-global--BorderWidth--md) solid var(--pf-c-page__header-nav--BackgroundColor);
   border-radius: var(--pf-global--BorderRadius--sm);
